PLAT-124527: Fix text to be aligned in center if no icon in FanSpeedControl (#405)
* added noIcon class to center text when there is no icon

* fixed font-weight after review

* deleted unused variable

* Update FanSpeedControl/FanSpeedControl.js


* updated changelog.md

--- a/styles/variables-base.less
+++ b/styles/variables-base.less
@@ -208,10 +208,9 @@
 // ArcPicker
 // ---------------------------------------
 @agate-fanspeedcontrol-font-size:        inherit;
-@agate-fanspeedcontrol-font-weight:      inherit;
 @agate-fanspeedcontrol-icon-font-size:   inherit;
 @agate-fanspeedcontrol-icon-height:      inherit;
-@agate-fanspeedcontrol-margin:           inherit;
+@agate-fanspeedcontrol-value-width:      inherit;
 
 // GridListImageItem
 // ---------------------------------------
